After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655070 - nautilus crashed with SIGSEGV in show_hidden_files_preference_callback()
nautilus crashed with SIGSEGV in show_hidden_files_preference_callback()
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.1.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-07-21 18:20 UTC by Pedro Villavicencio
Modified: 2011-09-28 19:05 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
window: make sure to disconnect GSettings signals when finalizing (3.72 KB, patch)
2011-09-28 19:05 UTC, Cosimo Cecchi
committed Details | Review

Description Pedro Villavicencio 2011-07-21 18:20:31 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/807234

"
Enabled Home Folder | Edit | Preferences | Show Hidden Files

Bottom buttons are beneath monitor frame, so grabbed nautilus window title bar and shoved it to top of screen. Title bar slid momentarily behind top panel followed by crash."

".

Thread 1 (Thread 1334)

  • #0 show_hidden_files_preference_callback
    at nautilus-window-menus.c line 279
  • #1 g_signal_emit_valist
    at /build/buildd/glib2.0-2.29.10/./gobject/gsignal.c line 2999
  • #2 g_trap_instance_signals
    from /usr/lib/i386-linux-gnu/libgobject-2.0.so.0

Comment 1 Cosimo Cecchi 2011-09-28 19:05:28 UTC
The following fix has been pushed:
d3c158d window: make sure to disconnect GSettings signals when finalizing


I just pushed a patch to git master for this, which should prevent the crash.
Comment 2 Cosimo Cecchi 2011-09-28 19:05:32 UTC
Created attachment 197695 [details] [review]
window: make sure to disconnect GSettings signals when finalizing

The GSettings object survive the window, so handlers connected to its
signals should be disconnected when the window is finalized.