window: make sure to disconnect GSettings signals when finalizing

The GSettings object survive the window, so handlers connected to its
signals should be disconnected when the window is finalized.

https://bugzilla.gnome.org/show_bug.cgi?id=655070